--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>hex-speller</title>
 
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1, width=device-width">
 
 		<!-- Google Font -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
